--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,8 +13,12 @@
         <!-- <li class="menu__item menu__item--with-submenu" ><a class="menu__link menu__link--drop"><span class="menu__link-text">Funds</span></a> -->
         <div class="submenu">
           <ul class="menu submenu__list">
-            <li class="submenu__item"><a class="submenu__link" routerLink="/funds/balance" routerLinkActive="menu__link--active"><span class="menu__link-text">Balance</span></a></li>
-            <li class="submenu__item"><a class="submenu__link" routerLink="transaction-history" routerLinkActive="menu__link--active"><span class="menu__link-text">Transaction history</span></a></li>
+            <li class="submenu__item"><a class="submenu__link" routerLink="/funds/balance"
+                                         routerLinkActive="menu__link--active"><span
+              class="menu__link-text">Balance</span></a></li>
+            <li class="submenu__item"><a class="submenu__link" routerLink="transaction-history"
+                                         routerLinkActive="menu__link--active"><span class="menu__link-text">Transaction history</span></a>
+            </li>
           </ul>
         </div>
       </li>
@@ -24,8 +28,12 @@
         <!-- <li class="menu__item menu__item--with-submenu"><a class="menu__link menu__link--drop" ><span class="menu__link-text">Orders</span></a> -->
         <div class="submenu">
           <ul class="menu submenu__list">
-            <li class="submenu__item"><a class="submenu__link"  routerLink="/orders/open" routerLinkActive="menu__link--active"><span class="menu__link-text">Open orders</span></a></li>
-            <li class="submenu__item"><a class="submenu__link"  routerLink="/orders/closed" routerLinkActive="menu__link--active"><span class="menu__link-text">Orders history</span></a></li>
+            <li class="submenu__item"><a class="submenu__link" routerLink="/orders/open"
+                                         routerLinkActive="menu__link--active"><span
+              class="menu__link-text">Open orders</span></a></li>
+            <li class="submenu__item"><a class="submenu__link" routerLink="/orders/closed"
+                                         routerLinkActive="menu__link--active"><span class="menu__link-text">Orders history</span></a>
+            </li>
           </ul>
         </div>
       </li>
@@ -38,8 +46,12 @@
         class="menu__link-text">Referral</span></a>
         <div class="submenu">
           <ul class="menu submenu__list">
-            <li class="submenu__item"><a class="submenu__link" routerLink="referral-structure" routerLinkActive="menu__link--active"><span class="menu__link-text">Referral structure</span></a></li>
-            <li class="submenu__item"><a class="submenu__link" routerLink="referral-charges" routerLinkActive="menu__link--active"><span class="menu__link-text">Referral charges</span></a></li>
+            <li class="submenu__item"><a class="submenu__link" routerLink="referral-structure"
+                                         routerLinkActive="menu__link--active"><span class="menu__link-text">Referral structure</span></a>
+            </li>
+            <li class="submenu__item"><a class="submenu__link" routerLink="referral-charges"
+                                         routerLinkActive="menu__link--active"><span class="menu__link-text">Referral charges</span></a>
+            </li>
           </ul>
         </div>
       </li>
@@ -165,11 +177,26 @@
         </a>
         <div class="submenu submenu--language">
           <ul class="menu__list submenu__list submenu__list--language">
-            <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag" src="../../assets/img/flag-ru.svg" alt=""><span class="language__text">Russian</span></a></li>
-            <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag" src="../../assets/img/flag-cn.svg" alt=""><span class="language__text">Chinese</span></a></li>
-            <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag" src="../../assets/img/flag-pl.svg" alt=""><span class="language__text">Polish</span></a></li>
-            <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag" src="../../assets/img/flag-en.svg" alt=""><span class="language__text">Hindi</span></a></li>
-            <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag" src="../../assets/img/flag-cn.svg" alt=""><span class="language__text">Ukrainian</span></a></li>
+            <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag"
+                                                                             src="../../assets/img/flag-ru.svg"
+                                                                             alt=""><span
+              class="language__text">Russian</span></a></li>
+            <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag"
+                                                                             src="../../assets/img/flag-cn.svg"
+                                                                             alt=""><span
+              class="language__text">Chinese</span></a></li>
+            <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag"
+                                                                             src="../../assets/img/flag-pl.svg"
+                                                                             alt=""><span
+              class="language__text">Polish</span></a></li>
+            <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag"
+                                                                             src="../../assets/img/flag-en.svg"
+                                                                             alt=""><span
+              class="language__text">Hindi</span></a></li>
+            <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag"
+                                                                             src="../../assets/img/flag-cn.svg"
+                                                                             alt=""><span class="language__text">Ukrainian</span></a>
+            </li>
           </ul>
         </div>
       </li>
@@ -214,33 +241,44 @@
       </div>
 
 
-      <nav class="menu-mob"><a class="menu-mob__link menu-mob__link--next-page" href="#"><img
+      <nav class="menu-mob">
+        <a class="menu-mob__link menu-mob__link--next-page"><img
         class="menu-mob__link-icon" src="../../assets/img/money-bag.svg"><span class="menu-mob__link-text">Estimated holdings</span><span
         class="menu-mob__link-holdings-inf">~ $43 522 764</span></a>
         <a
-          class="menu-mob__link" href="#"><img class="menu-mob__link-icon" src="../../assets/img/trade.svg"><span
+          class="menu-mob__link" href="https://exrates.me/dashboard"><img class="menu-mob__link-icon" src="../../assets/img/trade.svg"><span
           class="menu-mob__link-text">Trade</span></a>
-        <div class="menu-mob__drop-wrap"><a class="menu-mob__link menu-mob__link--drop"><img class="menu-mob__link-icon"
-                                                                                             src="../../assets/img/piggy-bank.svg"><span
-          class="menu-mob__link-text">Funds</span></a>
-          <div class="menu-mob__wrap-hidden-links">
-            <a class="menu-mob__link" href="#">Transaction history</a>
-            <a class="menu-mob__link" href="#">Income/Outcome</a>
+        <div class="menu-mob__drop-wrap">
+          <a class="menu-mob__link menu-mob__link--drop" (click)="toggleMenuDropdowns(FUNDS_FLAG)">
+            <img class="menu-mob__link-icon" src="../../assets/img/piggy-bank.svg"><span
+            class="menu-mob__link-text">Funds</span></a>
+          <div class="menu-mob__wrap-links" *ngIf="showFundsList">
+            <a class="menu-mob__link" (click)="mobileLinkClick()" routerLink="/transaction-history">Transaction
+              history</a>
+            <a class="menu-mob__link" (click)="mobileLinkClick()" routerLink="/funds/balances">Balance</a>
           </div>
         </div>
-        <div class="menu-mob__drop-wrap"><a class="menu-mob__link menu-mob__link--drop" href="#"><img
-          class="menu-mob__link-icon" src="../../assets/img/orders.svg"><span class="menu-mob__link-text">Orders</span></a>
-          <div class="menu-mob__wrap-hidden-links"><a class="menu-mob__link" href="#">Open orders</a><a
-            class="menu-mob__link" href="#">Orders history</a></div>
-        </div>
-        <div class="menu-mob__drop-wrap"><a class="menu-mob__link menu-mob__link--drop" href="#"><img
-          class="menu-mob__link-icon" src="../../assets/img/referral.svg"><span
-          class="menu-mob__link-text">Referral</span></a>
-          <div class="menu-mob__wrap-hidden-links"><a class="menu-mob__link" href="#">Lorem</a><a class="menu-mob__link"
-                                                                                                  href="#">Lorem</a>
+        <div class="menu-mob__drop-wrap">
+          <a class="menu-mob__link menu-mob__link--drop" (click)="toggleMenuDropdowns(ORDERS_FLAG)">
+            <img class="menu-mob__link-icon" src="../../assets/img/orders.svg">
+            <span class="menu-mob__link-text">Orders</span>
+          </a>
+          <div class="menu-mob__wrap-links" *ngIf="showOrdersList">
+            <a class="menu-mob__link" (click)="mobileLinkClick()" routerLink="/orders/open">Open orders</a>
+            <a class="menu-mob__link" (click)="mobileLinkClick()" routerLink="/orders/closed">Orders history</a>
           </div>
         </div>
-        <a class="menu-mob__link" href="#"><img class="menu-mob__link-icon" src="../../assets/img/newspaper.svg"><span
+        <div class="menu-mob__drop-wrap">
+          <a class="menu-mob__link menu-mob__link--drop" (click)="toggleMenuDropdowns(REFERRAL_FLAG)">
+          <img class="menu-mob__link-icon" src="../../assets/img/referral.svg">
+            <span class="menu-mob__link-text">Referral</span>
+          </a>
+          <div class="menu-mob__wrap-links" *ngIf="showReferralList">
+            <a class="menu-mob__link" (click)="mobileLinkClick()" routerLink="/referral-structure">Referral structure</a>
+            <a class="menu-mob__link" (click)="mobileLinkClick()" routerLink="/referral-charges">Referral charges</a>
+          </div>
+        </div>
+        <a class="menu-mob__link" href="https://exrates.me/dashboard"><img class="menu-mob__link-icon" src="../../assets/img/newspaper.svg"><span
           class="menu-mob__link-text">News</span></a>
       </nav>
     </div>
@@ -261,7 +299,8 @@
       </a>
 
 
-      <a class="header-mob__submenu-link" routerLink="funds/balances" routerLinkActive="header-mob__submenu-link--active"
+      <a class="header-mob__submenu-link" routerLink="funds/balances"
+         routerLinkActive="header-mob__submenu-link--active"
          (click)="setMobileWidget('balance')" *ngIf="isAuthenticated()">
         <img class="header-mob__submenu-link-img" src="../../assets/img/wallet.svg">
         <span class="header-mob__submenu-link-text">Balances</span>
