--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -193,12 +193,14 @@
 
 
 <app-refill-money
+  [ngClass]="{' modal--open': showRefillBalancePopup}"
   *ngIf="showRefillBalancePopup"
   [optionData]="refillBalanceData"
   (closeRefillBalancePopup)="openRefillBalancePopup(false)"
 ></app-refill-money>
 
 <app-send-money
+  [ngClass]="{' modal--open': showSendMoneyPopup}"
   *ngIf="showSendMoneyPopup"
   [optionData]="sendMoneyData"
   (closeSendMoneyPopup)="openSendMoneyPopup(false)"
