--- a/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.scss
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.scss
@@ -125,9 +125,10 @@
     display: block;
     min-width: 380px;
   }
-  .modal__note {
-    width: 100%;
-    left: 0;
+  .modal__note{
+    width: calc(100% + 64px);
+    left: -32px;
+    margin-top: 32px;
   }
 }
 //  -------------------
