--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
@@ -27,7 +27,7 @@
   }
   &__line{
     height: 1px;
-    background-color: #ECECEC;
+    background-color: #24253F;
   }
   &__info{
     margin-top: 28px;
@@ -42,6 +42,7 @@
   &__info-title{
     width: 50%;
     text-align: left;
+    color:#94C2FF;
   }
   &__info-value{
     width: 50%;
@@ -86,9 +87,14 @@
       max-width: calc(50% - 16px);
       margin-bottom: 0;
     }
+    &__info-row{
+      justify-content: space-between;
+    }
     &__info-title{
-      width: calc(50% - 48px);
-      text-align: right;
+      width: auto;
+      margin-left: 23%;
+      //width: calc(50% - 48px);
+      //text-align: right;
       margin-right: 32px;
     }
     &__info-value{
