--- a/src/assets/scss/components/_note.scss
+++ b/src/assets/scss/components/_note.scss
@@ -36,8 +36,8 @@
 @media (min-width:900px) {}
 @media (min-width:1200px) {
   .note {
-    //position: relative;
-    position: absolute;
+    position: relative;
+    //position: absolute;
     left: 0;
     padding: 32px;
   }
