--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -40,9 +40,16 @@
           </ul>
         </div>
       </li>
-      <li class="menu__item" routerLinkActive="menu__link--active"><a class="menu__link" routerLink="/settings"
-                                                                      *ngIf="isAuthenticated()"><span
-        class="menu__link-text">Settings</span></a></li>
+      <li class="menu__item" routerLinkActive="menu__link--active">
+        <!--<a class="menu__link" routerLink="/settings" *ngIf="isAuthenticated()">-->
+          <!--<span class="menu__link-text">Settings</span>-->
+        <!--</a>-->
+
+        <a class="menu__link" (click)="tempPopup()" *ngIf="isAuthenticated()">
+          <span class="menu__link-text">Settings</span>
+        </a>
+
+      </li>
       <!-- <li class="menu__item"><a class="menu__link" routerLink="/settings"><span class="menu__link-text">Settings</span></a></li> -->
       <li class="menu__item menu__item--with-submenu" *ngIf="isAuthenticated()" routerLinkActive="menu__link--active"><a
         class="menu__link menu__link--drop" routerLinkActive="menu__link--active"><span
@@ -215,13 +222,15 @@
     <div
       [ngClass]="{'header-mob__burger-content': !isMobileMenuOpen, 'header-mob__burger-content--open': isMobileMenuOpen }">
       <div class="header-mob__controls-row">
-        <a class="header-mob__controls-btn" (click)="toggleTheme()">
+        <!--<a class="header-mob__controls-btn" (click)="toggleTheme()">-->
+        <a class="header-mob__controls-btn" (click)="tempPopup()">
           <img class="header-mob__controls-icon" src="../../assets/img/header-mob-lamp.svg">
         </a>
         <a class="header-mob__controls-btn" href="#">
           <img class="header-mob__controls-icon" src="../../assets/img/header-mob-notification.svg">
         </a>
-        <a class="header-mob__controls-btn" (click)="navigateToSettings()">
+        <!--<a class="header-mob__controls-btn" (click)="navigateToSettings()">-->
+        <a class="header-mob__controls-btn" (click)="tempPopup()">
           <img class="header-mob__controls-icon" src="../../assets/img/header-mob-settings.svg">
         </a>
       </div>
