--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -1,81 +1,111 @@
-  <div class="settings__content">
-    <h3 class="title settings__content-title">Change password</h3>
+<div class="settings__content">
+  <h3 class="title settings__content-title">Change password</h3>
 
-    <!--TODO please style this-->
-    <h4> {{ statusMessage }}</h4>
+  <!--TODO please style this-->
+  <h4> {{ statusMessage }}</h4>
 
-    <form class="settings-form" [formGroup]="form" (ngSubmit)="onSubmit()">
-      <div class="settings__form-row">
-        <div class="wrap-input wrap-input--fix230">
-          <input
-            class="wrap-input__input"
-            [ngClass]="{'input--error': !form.get('password_1').valid && form.get('password_1').touched}"
-            [type]="getInputType()"
-            formControlName="password_1"
-          >
-          <label class="wrap-input__label" for="">Current password</label>
-          <div class="wrap-input__line"></div>
-          <span
-            class="wrap-input__show-password"
-            (click)="togglePasswordVisibility()"
-            [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
-          ></span>
-          <!--Input error section starts-->
-          <div *ngIf="form.get('password_1').touched && form.get('password_1').errors != null">
-              <span
-                *ngIf="form.get('password_1').errors['required']"
-                class="wrap-input__message">
+  <form class="settings-form" [formGroup]="form" (ngSubmit)="onSubmit()">
+    <div class="settings__form-row">
+      <div class="wrap-input wrap-input--fix230"
+           [ngClass]="{'wrap-input--error': !form.get('password_1').valid && form.get('password_1').touched && form.get('password_1').errors != null}"
+      >
+        <input
+          class="wrap-input__input"
+          [type]="getInputType()"
+          formControlName="password_1"
+          required
+        >
+        <label class="wrap-input__label">Current password</label>
+        <div class="wrap-input__line"></div>
+        <span
+          class="wrap-input__show-password"
+          (click)="togglePasswordVisibility()"
+          [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
+        ></span>
+        <!--Input error section starts-->
+
+        <span
+          *ngIf="form.get('password_1').touched && form.get('password_1').errors != null && form.get('password_1').errors['required']"
+          class="wrap-input__message">
                 This field is required.
               </span>
-            <span
-              *ngIf="form.get('password_1').invalid && !form.get('password_1').errors['required']"
-              class="wrap-input__message">
+        <span
+          *ngIf="form.get('password_1').touched && form.get('password_1').errors != null && form.get('password_1').invalid && !form.get('password_1').errors['required']"
+          class="wrap-input__message">
                 Password must be between 8 and 20 symbols, contain letters and numbers.
               </span>
-          </div>
-          <!--Input error section ends-->
-        </div>
-        <span class="settings__form-notice">for safety, to confirm that you it is you </span>
+
+        <!--<div *ngIf="form.get('password_1').touched && form.get('password_1').errors != null">-->
+        <!--<span-->
+        <!--*ngIf="form.get('password_1').errors['required']"-->
+        <!--class="wrap-input__message">-->
+        <!--This field is required.-->
+        <!--</span>-->
+        <!--<span-->
+        <!--*ngIf="form.get('password_1').invalid && !form.get('password_1').errors['required']"-->
+        <!--class="wrap-input__message">-->
+        <!--Password must be between 8 and 20 symbols, contain letters and numbers.-->
+        <!--</span>-->
+        <!--</div>-->
+
+        <!--Input error section ends-->
       </div>
-      <div class="settings__form-row">
-        <div class="wrap-input wrap-input--fix230">
-          <input
-            class="wrap-input__input"
-            [ngClass]="{'input--error': !form.get('password_1').valid && form.get('password_1').touched}"
-            [type]="getInputType()"
-            formControlName="password_2"
-          >
-          <label class="wrap-input__label" for="">New password</label>
-          <div class="wrap-input__line"></div>
-          <span
-            class="wrap-input__show-password"
-            (click)="togglePasswordVisibility()"
-            [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
-          ></span>
-          <!--Input error section starts-->
-          <div *ngIf="form.get('password_2').touched && form.get('password_2').errors != null">
-              <span
-                *ngIf="form.get('password_2').errors['required']"
-                class="wrap-input__message">
+      <span class="settings__form-notice">for safety, to confirm that you it is you </span>
+    </div>
+    <div class="settings__form-row">
+      <div class="wrap-input wrap-input--fix230"
+           [ngClass]="{'wrap-input--error': !form.get('password_2').valid && form.get('password_2').touched}"
+      >
+        <input
+          class="wrap-input__input"
+          [type]="getInputType()"
+          formControlName="password_2"
+          required
+        >
+        <label class="wrap-input__label">New password</label>
+        <div class="wrap-input__line"></div>
+        <span
+          class="wrap-input__show-password"
+          (click)="togglePasswordVisibility()"
+          [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
+        ></span>
+        <!--Input error section starts-->
+
+        <span
+          *ngIf="form.get('password_2').touched && form.get('password_2').errors != null && form.get('password_2').errors['required']"
+          class="wrap-input__message">
                 This field is required.
               </span>
-            <span
-              *ngIf="form.get('password_2').invalid && !form.get('password_2').errors['required']"
-              class="wrap-input__message">
+        <span
+          *ngIf="form.get('password_2').touched && form.get('password_2').errors != null && form.get('password_2').invalid && !form.get('password_2').errors['required']"
+          class="wrap-input__message">
                 The passwords do not match.
               </span>
-          </div>
-          <!--Input error section ends-->
-        </div>
-        <span class="settings__form-notice">should have 8 chars at least, symbols and numbers</span>
+
+        <!--<div *ngIf="form.get('password_2').touched && form.get('password_2').errors != null">-->
+        <!--<span-->
+        <!--*ngIf="form.get('password_2').errors['required']"-->
+        <!--class="wrap-input__message">-->
+        <!--This field is required.-->
+        <!--</span>-->
+        <!--<span-->
+        <!--*ngIf="form.get('password_2').invalid && !form.get('password_2').errors['required']"-->
+        <!--class="wrap-input__message">-->
+        <!--The passwords do not match.-->
+        <!--</span>-->
+        <!--</div>-->
+
+        <!--Input error section ends-->
       </div>
-      <!---->
-      <button class="btn settings__form-btn">Change password</button>
-    </form>
-  </div>
-  <!--<div class="notification-popup change-pass-notif">-->
-    <!--<img class="notification-popup__icon" src="../../../assets/img/key.svg">-->
-    <!--<img class="notification-popup__close notification-popup__close&#45;&#45;mob" src="../../../assets/img/close-grey.svg" alt="close">-->
-      <!--Password successfully changed-->
-    <!--<img class="notification-popup__close" src="../../../assets/img/close-blue.svg"  alt="close">-->
-  <!--</div>-->
+      <span class="settings__form-notice">should have 8 chars at least, symbols and numbers</span>
+    </div>
+    <!---->
+    <button class="btn settings__form-btn">Change password</button>
+  </form>
+</div>
+<!--<div class="notification-popup change-pass-notif">-->
+<!--<img class="notification-popup__icon" src="../../../assets/img/key.svg">-->
+<!--<img class="notification-popup__close notification-popup__close&#45;&#45;mob" src="../../../assets/img/close-grey.svg" alt="close">-->
+<!--Password successfully changed-->
+<!--<img class="notification-popup__close" src="../../../assets/img/close-blue.svg"  alt="close">-->
+<!--</div>-->
