--- a/src/app/settings/nickname/nickname.component.html
+++ b/src/app/settings/nickname/nickname.component.html
@@ -1,35 +1,43 @@
-  <div class="settings__content">
-    <h3 class="title settings__content-title">Nickname</h3>
-    <div class="subtitle settings__content-subtitle">For inner transactions users could use your nickname instead of email.</div>
+<div class="settings__content">
+  <h3 class="title settings__content-title">Nickname</h3>
+  <div class="subtitle settings__content-subtitle">For inner transactions users could use your nickname instead of email.</div>
 
-    <h4>{{statusMessage}}</h4>
-    <form class="settings-form" [formGroup]="form" (ngSubmit)="onSubmit()">
-      <div class="settings__form-row">
-        <div class="wrap-input wrap-input--fix230">
-          <input
-            class="wrap-input__input"
-            type="text"
-            formControlName="nickname"
-          >
-          <!--ERROR PART-->
-          <div class="input--error" *ngIf="!form.get('nickname').valid && form.get('nickname').touched">
-            <div *ngIf="form.get('nickname').errors != null && form.get('nickname').errors['required']">This field is required</div>
-            <div *ngIf="form.get('nickname').errors != null && form.get('nickname').invalid">Only (A-z), (–), (=) are allowed</div>
-          </div>
+  <h4>{{statusMessage}}</h4>
+  <form class="settings-form" [formGroup]="form" (ngSubmit)="onSubmit()">
+    <div class="settings__form-row">
+      <div class="wrap-input wrap-input--fix230"
+           [ngClass]="{'wrap-input--error': !form.get('nickname').valid && form.get('nickname').touched && form.get('nickname').errors != null}"
+      >
+        <input
+          class="wrap-input__input"
+          type="text"
+          formControlName="nickname"
+          required
+        >
 
-          <label class="wrap-input__label" for="">Nickname</label>
-          <div class="wrap-input__line"></div>
-          <span class="wrap-input__message">WThis nickname already taken. Please take another one.</span>
-        </div>
-        <span class="settings__form-notice">– use only (A-z), (–), (=) symbols, </span>
+        <label class="wrap-input__label">Nickname</label>
+        <div class="wrap-input__line"></div>
+
+        <!--Input error section starts-->
+        <span class="wrap-input__message"
+              *ngIf="!form.get('nickname').valid && form.get('nickname').errors != null && form.get('nickname').errors['required']"
+        >This field is required.</span>
+        <span class="wrap-input__message"
+              *ngIf="form.get('nickname').errors != null && form.get('nickname').invalid"
+        >Only (A-z), (–), (=) are allowed</span>
+        <!--Input error section ends-->
+
       </div>
-      <button class="btn settings__form-btn" [disabled]="isUpdateDisabled">Save</button>
-    </form>
-    <div class="note settings__note">
-      <div class="note__title">Please note:</div>
-      <ul class="note__list">
-        <li class="note__list-item">Nickname can be specified only 1 time</li>
-        <li class="note__list-item">After creating a nickname, it will not be possible to change it</li>
-      </ul>
+
+      <span class="settings__form-notice">– use only (A-z), (–), (=) symbols, </span>
     </div>
+    <button class="btn settings__form-btn" [disabled]="isUpdateDisabled">Save</button>
+  </form>
+  <div class="note settings__note">
+    <div class="note__title">Please note:</div>
+    <ul class="note__list">
+      <li class="note__list-item">Nickname can be specified only 1 time</li>
+      <li class="note__list-item">After creating a nickname, it will not be possible to change it</li>
+    </ul>
   </div>
+</div>
