fix orders in dashboard row color

--- a/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.scss
+++ b/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.scss
@@ -19,7 +19,14 @@
     }
   }
 }
-
+.table__row{
+  &:nth-of-type(odd) {
+    background-color: rgba(255,255,255,.05);
+  }
+  &:hover {
+    background-color:rgba(255, 255, 255, 0.15);
+  }
+}
 .paginator {
   position: absolute;
   right: 16px;
