--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -126,6 +126,7 @@
     display: inline-block;
     width: 16px;
     height: 16px;
+    vertical-align: middle;
     svg {
       fill: $dark-indigo;
     }
