--- a/src/app/funds/balance/refill-money/refill-step-two/refill-inner-transfer/refill-inner-transfer.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-inner-transfer/refill-inner-transfer.component.html
@@ -23,7 +23,7 @@
   </div>
   <div class="refill__transfer-message-text">
     <h6>Congratulations!</h6>
-    <span>You successfuly got <b>35 BTC!</b></span>
+    <span>You successfuly got <b>{{sendSuccessRes.notyAmount}} {{currencyName}}!</b></span>
   </div>
 </div>
 
