--- a/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
@@ -37,13 +37,13 @@
       <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
     </td>
     <td class="table__cell">
-      <span>{{item.exExchangeRate  | replaceNumber}} </span>
+      <span>{{item.exExchangeRate  | replaceNumber}} {{arrPairName[1]}}</span>
     </td>
     <td class="table__cell">
       <span>{{item.amountBase | replaceNumber}} {{arrPairName[0]}}</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>{{item.commissionValue | replaceNumber}}%</span>
+      <span>{{item.commissionFixedAmount | replaceNumber}} {{arrPairName[1]}}</span>
     </td>
     <td class="table__cell">
       <span>{{item.amountWithCommission | replaceNumber}} {{arrPairName[1]}}</span>
