--- a/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
@@ -70,16 +70,16 @@
       <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
     </td>
     <td class="table__cell">
-      <span>{{item.exExchangeRate | replaceNumber}} USD</span>
+      <span>{{item.exExchangeRate | replaceNumber}} {{item.currencyPairName | splitCurrency: 2}}</span>
     </td>
     <td class="table__cell">
-      <span>{{item.amountBase | replaceNumber}} BTC</span>
+      <span>{{item.amountBase | replaceNumber}} {{item.currencyPairName | splitCurrency: 1}}</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>{{item.commissionValue | replaceNumber}}%</span>
+      <span>{{item.commissionFixedAmount | replaceNumber}} {{item.currencyPairName | splitCurrency: 2}}</span>
     </td>
     <td class="table__cell">
-      <span>{{item.amountWithCommission | replaceNumber}} USD</span>
+      <span>{{item.amountWithCommission | replaceNumber}} {{item.currencyPairName | splitCurrency: 2}}</span>
     </td>
     <td class="table__cell">
       <span>{{item.status}}</span>
