added changes to the market search component

--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -299,7 +299,9 @@
   <app-market-search
     (closeModal)="toggleSearchModal($event)"
     *ngIf="marketSearch"
-    [pairs]="currencyPairs">
+    [pairs]="currencyPairs"
+    [isFiat]="isFiat"
+  >
 
   </app-market-search>
 
