--- a/src/assets/scss/components/_link.scss
+++ b/src/assets/scss/components/_link.scss
@@ -11,3 +11,13 @@
   }
   /*--- modificators end ---*/
 }
+/*--- DARK THEME START---*/
+.dark-theme{
+  .link{
+    color:$light-blue;
+  }
+}
+@media (min-width:1200px) {
+  .dark-theme{}
+}
+/*--- DARK THEME END---*/
