--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -226,7 +226,7 @@
         <a class="header-mob__controls-btn" (click)="tempPopup()">
           <img class="header-mob__controls-icon" src="../../assets/img/header-mob-lamp.svg">
         </a>
-        <a class="header-mob__controls-btn" href="#">
+        <a class="header-mob__controls-btn" >
           <img class="header-mob__controls-icon" src="../../assets/img/header-mob-notification.svg">
         </a>
         <!--<a class="header-mob__controls-btn" (click)="navigateToSettings()">-->
