--- a/src/app/popups/demo-trading-popup/demo-trading-popup.component.html
+++ b/src/app/popups/demo-trading-popup/demo-trading-popup.component.html
@@ -3,6 +3,6 @@
     <div class="popup__close" (click)="closeMe()"></div>
     <div class="text" [innerHTML]="showHtml">
     </div>
-    <button class="btn btn--active btn--center" (click)="closeMe()">Continue trading</button>
+    <button class="btn btn--active btn--center" (click)="buttonClick()">{{buttonText}}</button>
   </div>
 </div>
