--- a/src/app/dashboard/components/order-book/order-book.component.html
+++ b/src/app/dashboard/components/order-book/order-book.component.html
@@ -65,7 +65,7 @@
         <div class="item" *ngFor="let item of showSellDataRverse; let i = index" (click)="onSelectOrder(i, item, 'trading')">
           <div class="order">
             <span>
-              {{item.total  | roundCurrency| replaceNumber}}
+              {{item.total  | roundCurrency | formatCurrency}}
             </span>
           </div>
 
@@ -76,13 +76,13 @@
 
           <div class="price">
             <span>
-              {{item.exrate | roundCurrency | replaceNumber}}
+              {{item.exrate | roundCurrency | formatCurrency}}
             </span>
           </div>
 
           <div class="total">
             <span>
-              {{item.amount | roundCurrency | replaceNumber}}
+              {{item.amount | roundCurrency | formatCurrency}}
             </span>
           </div>
 
@@ -120,21 +120,21 @@
       <div class="separator">
         <span
           [ngClass]="{'color-red': !isExratePositive, 'color-green': isExratePositive}">
-          {{!+lastExrate ? 0 : +lastExrate | roundCurrency | replaceNumber}}
+          {{!+lastExrate ? 0 : +lastExrate | roundCurrency | formatCurrency}}
         </span>
         <img *ngIf="+preLastExrate < +lastExrate" class="arr arr--ml4" src="../assets/img/arr-up-green.svg">
         <img *ngIf="+preLastExrate > +lastExrate" class="arr arr--ml4" src="../assets/img/arr-down-red.svg">
         <div class="hr"></div>
-        <span >{{!+preLastExrate ? 0 : +preLastExrate | roundCurrency | replaceNumber}}</span>
+        <span >{{!+preLastExrate ? 0 : +preLastExrate | roundCurrency | formatCurrency}}</span>
       </div>
 
       <!--<div class="separator" *ngIf="lastOrder">-->
         <!--<span *ngIf="maxExrate" [ngClass]="{'color-red': !lastOrderUp, 'color-green': lastOrderUp}">{{!lastOrder.amountBase ? 0 : lastOrder.amountBase-->
-          <!--| number:'1.1-8' | replaceNumber}}</span>-->
+          <!--| number:'1.1-8' | formatCurrency}}</span>-->
         <!--<img *ngIf="lastOrderUp" class="arr arr&#45;&#45;ml4" src="../assets/img/arr-up-green.svg">-->
         <!--<img *ngIf="!lastOrderUp" class="arr arr&#45;&#45;ml4" src="../assets/img/arr-down-red.svg">-->
         <!--<div class="hr"></div>-->
-        <!--<span *ngIf="minExrate">{{!lastOrder.exrate ? 0 :lastOrder.exrate | number:'1.1-8' | replaceNumber}}</span>-->
+        <!--<span *ngIf="minExrate">{{!lastOrder.exrate ? 0 :lastOrder.exrate | number:'1.1-8' | formatCurrency}}</span>-->
       <!--</div>-->
       <!---->
 
@@ -162,7 +162,7 @@
           (click)="onSelectOrder(i, item)">
           <div class="order">
             <span>
-              {{item.total  | roundCurrency | replaceNumber}}
+              {{item.total  | roundCurrency | formatCurrency}}
             </span>
           </div>
 
@@ -174,13 +174,13 @@
 
           <div class="price">
             <span>
-              {{item.exrate | roundCurrency | replaceNumber}}
+              {{item.exrate | roundCurrency | formatCurrency}}
             </span>
           </div>
 
           <div class="total">
             <span>
-              {{item.amount | roundCurrency | replaceNumber}}
+              {{item.amount | roundCurrency | formatCurrency}}
             </span>
           </div>
 
@@ -246,25 +246,25 @@
         <div class="item" *ngFor="let item of showSellDataRverse; let i = index" (click)="onSelectOrder(i, item, 'trading')">
           <div class="order">
             <span>
-              {{item.total | roundCurrency | replaceNumber}}
+              {{item.total | roundCurrency | formatCurrency}}
             </span>
           </div>
 
           <!-- <div class="info">
             <span>
-              {{item.exrate | number:'1.1-8' | replaceNumber}}
+              {{item.exrate | number:'1.1-8' | formatCurrency}}
             </span>
           </div> -->
 
           <div class="price">
             <span>
-              {{item.exrate | roundCurrency | replaceNumber}}
+              {{item.exrate | roundCurrency | formatCurrency}}
             </span>
           </div>
 
           <div class="total">
             <span>
-              {{item.amount | roundCurrency | replaceNumber}}
+              {{item.amount | roundCurrency | formatCurrency}}
             </span>
           </div>
 
@@ -272,11 +272,11 @@
       </div>
       <div class="separator" >
         <span *ngIf="maxExrate" [ngClass]="{'color-red': !isExratePositive, 'color-green': isExratePositive}">
-          {{!+lastExrate ? 0 : +lastExrate | roundCurrency | replaceNumber}}</span>
+          {{!+lastExrate ? 0 : +lastExrate | roundCurrency | formatCurrency}}</span>
         <img *ngIf="isExratePositive" class="arr arr--ml4" src="../assets/img/arr-up-green.svg">
         <img *ngIf="!isExratePositive" class="arr arr--ml4" src="../assets/img/arr-down-red.svg">
         <div class="hr"></div>
-        <span >{{!+preLastExrate ? 0 : +preLastExrate | roundCurrency | replaceNumber}}</span>
+        <span >{{!+preLastExrate ? 0 : +preLastExrate | roundCurrency | formatCurrency}}</span>
       </div>
       <div class="items mobile">
 
@@ -298,25 +298,25 @@
         <div class="item" *ngFor="let item of showBuyDataRverse; let i = index" (click)="onSelectOrder(i, item, 'trading')">
           <div class="order">
             <span>
-              {{item.total | roundCurrency | replaceNumber}}
+              {{item.total | roundCurrency | formatCurrency}}
             </span>
           </div>
 
           <!-- <div class="info">
             <span>
-              {{item.exrate | roundCurrency | replaceNumber}}
+              {{item.exrate | roundCurrency | formatCurrency}}
             </span>
           </div> -->
 
           <div class="price">
             <span>
-              {{item.exrate | roundCurrency | replaceNumber}}
+              {{item.exrate | roundCurrency | formatCurrency}}
             </span>
           </div>
 
           <div class="total">
             <span>
-              {{item.amount | roundCurrency | replaceNumber}}
+              {{item.amount | roundCurrency | formatCurrency}}
             </span>
           </div>
         </div>
