--- a/src/app/dashboard/components/market-search/market-search.component.html
+++ b/src/app/dashboard/components/market-search/market-search.component.html
@@ -51,8 +51,8 @@
           <span class="txt-small txt-light-grey">/ <span>{{splitPairName(pair.currencyPairName)[1]}}</span></span>
         </td>
         <td class="table__cell table__cell--tar">
-          <span>{{pair.lastOrderRate | roundCurrency: isFiat | replaceNumber }}</span>
-          <span class="txt-small txt-light-grey">/<span>$ {{+pair.priceInUsd | roundCurrency: true | replaceNumber}}</span></span>
+          <span>{{pair.lastOrderRate | roundCurrency: isFiat | formatCurrency }}</span>
+          <span class="txt-small txt-light-grey">/<span>$ {{+pair.priceInUsd | roundCurrency: true | formatCurrency}}</span></span>
         </td>
       </tr>
       <tr style="height: 10px;"></tr>
