--- a/src/assets/scss/components/_overlay.scss
+++ b/src/assets/scss/components/_overlay.scss
@@ -17,6 +17,7 @@
   }
 
   &--modal {
+    width: 100%;
     position: fixed;
     z-index: 1500;
     top: 0;
@@ -24,8 +25,7 @@
     bottom: 0;
     left: 0;
     display: block;
-    overflow: hidden;
-    overflow-x: auto;
+    overflow-x: hidden;
     overflow-y: scroll;
     background-color: rgba(0,0,0,0.85);
   }
