--- a/src/app/funds/balance/send-money/send-money.component.scss
+++ b/src/app/funds/balance/send-money/send-money.component.scss
@@ -1,6 +1,16 @@
 .modal__content{
   padding: 32px 12px;
 }
+.overlay--modal{
+  background-color: transparent;
+  transition: background-color .4s ease;
+}
+.modal--open{
+  background-color: rgba(0, 0, 0, 0.85);
+  .modal{
+    right: 0;
+  }
+}
 @media (min-width:600px){
   .modal__content{
     padding: 32px 12px;
