--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   min-height: 100%;
   margin-left: auto;
-  transition: all 0.5s ease;
+  transition: all 0.4s ease;
   background-color: #fff;
   /*--- modificators start ---*/
   /*--- modificators end ---*/
@@ -314,6 +314,7 @@
 
 @media (min-width: 1200px) {
   .modal {
+    right: -900px;
     width: 50%;
     min-width: 800px;
     max-width: 800px;
